syntax = "proto3";

package rivet.backend.pkg.game.banner_upload_complete;

import "proto/common.proto";

message Request {
	rivet.common.Uuid game_id = 1;
	rivet.common.Uuid upload_id = 2;
}

message Response {

}
